--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
                 <div class="mb-3 col-lg-3 col-md-12">
                     <h2 class="text-darkOrange fw-bold">瞭解 SVG</h2>
                 </div>
-                <div class="p-3 col-lg-3 col-md-4 col-sm-12">
+                <a href="./svg_shapes.html" class=" p-3 col-lg-3 col-md-4 col-sm-12 dark-link">
                     <p>形狀元素</p>
                     <img class="w-100" src="./img/geometry_shapes_black_and_white.jpg">
-                </div>
-                <div class="p-3 col-lg-3 col-md-4 col-sm-12">
+                </a>
+                <a href="./svg_path_and_words.html" class="p-3 col-lg-3 col-md-4 col-sm-12 dark-link">
                     <p>路徑與文字</p>
                     <img class="w-100" src="./img/path.png">
-                </div>
-                <a href="#" class="p-3 col-lg-3 col-md-4 col-sm-12">
+                </a>
+                <a href="./svg_style.html" class="p-3 col-lg-3 col-md-4 col-sm-12 dark-link">
                     <p>樣式與轉換屬性</p>
                     <img class="w-100" src="./img/color.jpg">
                 </a>
@@ -50,17 +50,17 @@
         </section>
 
         <!-- D3.js 選取與綁定 -->
-        <section class="container-fluid bg-darkOrange py-4">
-            <h2 class="text-white text-center pb-2">D3.js 選取與綁定</h2>
+        <section class="container-fluid bg-orange py-4">
+            <h2 class="text-darkOrange text-center pb-2 fw-bold">D3.js 選取與綁定</h2>
             <div class="flex-wrap d-flex justify-content-around ">
-                <div class="text-center p-2 col-md-6 col-sm-12 col-12">
+                <a class="text-center p-2 col-md-6 col-sm-12 col-12 dark-link">
                     <p class="">Selection 選取</p>
                     <img class="rounded w-50" src="./img/select.jpg">
-                </div>
-                <div class="text-center p-2 col-md-6 col-sm-12 col-12">
+                </a>
+                <a class="text-center p-2 col-md-6 col-sm-12 col-12 dark-link">
                     <p class="">Binding 綁定</p>
                     <img class="rounded w-50" src="./img/bind.jpg">
-                </div>
+                </a>
             </div>
         </section>
 
@@ -70,7 +70,7 @@
             <div class="flex-wrap d-flex justify-content-between">
                 <div class="p-2 col-md-3 col-sm-6 col-12">
                     <p class="text-center">JSON</p>
-                    <img class="rounded-circle w-100" src="./img/bind.jpg">
+                    <!-- <img class="rounded-circle w-100" src="./img/bind.jpg"> -->
                 </div>
                 <div class="p-2 col-md-3 col-sm-6 col-12">
                     <p class="text-center">csv/tsv/dsv</p>
@@ -86,21 +86,25 @@
 
         <!-- 整理資料的 APIs -->
         <section class="container pt-5 z-5 position-relative">
-            <div class="flex-wrap h-100 text-center py-3 w-100 d-md-flex justify-content-around align-items-center">
+            <div class="flex-wrap h-100 text-center py-3 w-100 d-md-flex justify-content-around align-items-start">
                 <div class="mb-3 col-12">
                     <h2 class="text-darkOrange fw-bold">整理資料的 APIs</h2>
                 </div>
                 <div class="p-3 col-lg-3 col-md-6 col-sm-12">
                     <p class="text-center">Array</p>
+                    <img class="h-50 w-100" src="./img/array.png">
                 </div>
                 <div class="p-3 col-lg-3 col-md-6 col-sm-12">
                     <p class="text-center">Time Formats</p>
+                    <img class="h-50 w-100" src="./img/time.jpg">
                 </div>
                 <div class="p-3 col-lg-3 col-md-6 col-sm-12">
                     <p class="text-center">Number Formats</p>
+                    <img class="h-50 w-100" src="./img/numbers.jpg">
                 </div>
                 <div class="p-3 col-lg-3 col-md-6 col-sm-12">
                     <p class="text-center">Random</p>
+                    <img class="w-100" src="./img/random.jpg">
                 </div>
             </div>
         </section>
@@ -171,8 +175,8 @@
         </section>
 
         <!-- 動畫與互動效果 -->
-        <section class="container-fluid bg-darkOrange py-3">
-            <h2 class="text-center text-white w-100">動畫與互動效果</h2>
+        <section class="container-fluid bg-orange py-3">
+            <h2 class="text-center text-darkOrange w-100 fw-bold">動畫與互動效果</h2>
             <div class="flex-wrap text-center top-25 w-100 d-flex justify-content-around">
                 <div class="p-3 col-lg-4 col-md-4 col-sm-12">
                     <p class="text-center">transition</p>
@@ -197,7 +201,7 @@
 
         <!-- 進階圖表 -->
         <section class="container pt-5">
-            <h1 class="text-center">進階圖表</h1>
+            <h2 class="text-center text-darkOrange fw-bold">進階圖表</h2>
             <div class="flex-wrap d-flex justify-content-center">
                 <div class="text-center mb-5 col-12 col-sm-8 col-md-6 col-lg-4">
                     <p>line chart</p>
