--- a/svg_shapes.html
+++ b/svg_shapes.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SVG Shapes</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./utils.css">
+    <link rel="stylesheet" href="./extension/prism.css">
+    <link rel="stylesheet" href="./css/utils.css">
+    
 
 </head>
 <body>
@@ -18,12 +20,30 @@
         </div>
     </nav>
 
-      <div class="container p-4">
-        <h2 class="text-center text-secondary">SVG 繪製形狀</h2>
+    <div class="container p-4">
+      <h2 class="text-center text-secondary mb-5">SVG 繪製形狀</h2>
+
+      <div class="">
+        <h3> &lt;Rect&gt; 矩形</h3>
+        <svg widt="400", height="200" style="border:1px solid rgb(96, 96, 96)">
+
+        </svg>
+
+        <p class="mt-3 mb-1 fs-5">程式碼</>
+        <pre class="border">
+          <code class="language-html">
+            &lt;svg width="400" height="200" style="border:1px solid red"
+              &lt;rect x="20" y="20" width="300" height="100" 
+                  style="fill:rgb(255, 0, 255); stroke-width:3; stroke:rgb(0,0,0)"/&gt;
+            &lt;/svg &gt;
+          </code>
+        </pre>
       </div>
+    </div>
     
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="./extension/prism.js"></script>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script></script>
 </body>
