--- a/svg_shapes.html
+++ b/svg_shapes.html
@@ -31,7 +31,7 @@
 
         <p class="mt-3 mb-1 fs-5">程式碼</>
         <pre class="border">
-          <code class="language-html">
+          <code class="language-html line-numbers remove-initial-line-feed" data-prismjs-copy="複製程式碼">
             &lt;svg width="400" height="200" style="border:1px solid red"
               &lt;rect x="20" y="20" width="300" height="100" 
                   style="fill:rgb(255, 0, 255); stroke-width:3; stroke:rgb(0,0,0)"/&gt;
