--- a/svg_style.html
+++ b/svg_style.html
@@ -1,19 +1,229 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SVG Style</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./extension/prism.css">
-</head>
-<body>
-    
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>SVG Shapes</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./extension/prism.css" />
+    <link rel="stylesheet" href="./css/utils.css" />
+  </head>
+  <body>
+    <nav class="bg-orange navbar">
+      <div class="container-fluid">
+        <a
+          class="text-decoration-none fw-bold navbar-brand"
+          href="./index.html"
+        >
+          <span class="nav-title"> D3.js 圖表繪製教學</span>
+        </a>
+      </div>
+    </nav>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <div class="container p-4">
+      <h2 class="text-center text-secondary mb-5">SVG 樣式與屬性</h2>
+
+      <h3>SVG 常用樣式屬性</h3>
+      <div class="mt-3">
+        <div class="col-lg-6 col-md-6 col-sm-12">
+            <table class="table table-striped">
+                <thead>
+                  <tr>
+                    <th scope="col">程式碼</th>
+                    <th scope="col">功能</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>&lt;stroke&gt;</td>
+                    <td>邊框、線條顏色</td>
+                  </tr>
+                  <tr>
+                    <td>&lt;stroke-width&gt;</td>
+                    <td>邊框、線條粗細</td>
+                  </tr>
+                  <tr>
+                    <td>&lt;fill&gt;</td>
+                    <td>圖形、文字填滿顏色</td>
+                  </tr>
+                </tbody>
+              </table>
+        </div>
+
+        <svg width="500" height="200" style="border: 1px solid rgb(96, 96, 96)">
+          <rect x="40" y="40" width="300" height="100"
+            style="stroke: rgb(248, 204, 61); stroke-width: 6; fill: none"/>
+        </svg>
+
+        <p class="mt-3 mb-1 fs-5">程式碼</p>
+        <pre class="border">
+          <code class="language-html line-numbers remove-initial-line-feed" data-prismjs-copy="複製程式碼">
+            &lt;svg width=&quot;500&quot; height=&quot;200&quot; style=&quot;border: 1px solid rgb(96, 96, 96)&quot;&gt;
+                &lt;rect x=&quot;40&quot; y=&quot;40&quot; width=&quot;300&quot; height=&quot;100&quot;
+                    style=&quot;stroke: rgb(248, 204, 61); stroke-width: 6; fill: none&quot;/&gt;
+            &lt;/svg&gt;
+          </code>
+        </pre>
+      </div>
+
+      <div class="mt-5">
+        <div class="col-lg-6 col-md-6 col-sm-12">
+            <table class="table table-striped">
+                <thead>
+                  <tr>
+                    <th scope="col">程式碼</th>
+                    <th scope="col">功能</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>&lt;font-size&gt;</td>
+                    <td>文字尺寸</td>
+                  </tr>
+                  <tr>
+                    <td>&lt;opacity&gt;</td>
+                    <td>圖形透明度</td>
+                  </tr>
+                  <tr>
+                    <td>&lt;visibility&gt;</td>
+                    <td>圖形是否可視</td>
+                  </tr>
+                </tbody>
+              </table>
+        </div>
+
+        <svg width="500" height="200" style="border: 1px solid rgb(96, 96, 96)">
+            <text x="50,100,180" y="80,140,40" 
+                  fill="rgb(248, 117, 61)" text-anchor="start" font-size="1em">
+              猜 誰
+            </text>
+            <text x="100" y="140" 
+                  fill="rgb(248, 204, 61)" text-anchor="start" font-size="3em">
+              猜
+            </text>
+            <text x="240,360" y="180,160" opacity="0.4" 
+                  fill="rgb(248, 117, 61)" text-anchor="start" font-size="4em">
+              被
+            </text>
+            <text x="360" y="160" opacity="0.8" 
+                  fill="rgb(248, 204, 61)" text-anchor="start" font-size="2em">
+              隱
+            </text>
+            <text x="430" y="160" visibility="hidden"
+                  fill="rgb(248, 117, 61)" text-anchor="start" font-size="2em">
+              藏
+            </text>
+            <text x="480" y="80" 
+                  fill="rgb(248, 117, 61)" text-anchor="start" font-size="2em">
+              了
+            </text>
+        </svg>
+
+        <p class="mt-3 mb-1 fs-5">程式碼</p>
+        <pre class="border">
+          <code class="language-html line-numbers remove-initial-line-feed" data-prismjs-copy="複製程式碼">
+            &lt;svg width=&quot;500&quot; height=&quot;200&quot; style=&quot;border: 1px solid rgb(96, 96, 96)&quot;&gt;
+            &lt;text x=&quot;50,100,180&quot; y=&quot;80,140,40&quot; 
+                  fill=&quot;rgb(248, 117, 61)&quot; text-anchor=&quot;start&quot; font-size=&quot;1em&quot;&gt;
+              猜 誰
+            &lt;/text&gt;
+            &lt;text x=&quot;100&quot; y=&quot;140&quot; 
+                  fill=&quot;rgb(248, 204, 61)&quot; text-anchor=&quot;start&quot; font-size=&quot;3em&quot;&gt;
+              猜
+            &lt;/text&gt;
+            &lt;text x=&quot;240,360&quot; y=&quot;180,160&quot; opacity=&quot;0.4&quot; 
+                  fill=&quot;rgb(248, 117, 61)&quot; text-anchor=&quot;start&quot; font-size=&quot;4em&quot;&gt;
+              被
+            &lt;/text&gt;
+            &lt;text x=&quot;360&quot; y=&quot;160&quot; opacity=&quot;0.8&quot; 
+                  fill=&quot;rgb(248, 204, 61)&quot; text-anchor=&quot;start&quot; font-size=&quot;2em&quot;&gt;
+              隱
+            &lt;/text&gt;
+            &lt;text x=&quot;430&quot; y=&quot;160&quot; visibility=&quot;hidden&quot;
+                  fill=&quot;rgb(248, 117, 61)&quot; text-anchor=&quot;start&quot; font-size=&quot;2em&quot;&gt;
+              藏
+            &lt;/text&gt;
+            &lt;text x=&quot;480&quot; y=&quot;80&quot; 
+                  fill=&quot;rgb(248, 117, 61)&quot; text-anchor=&quot;start&quot; font-size=&quot;2em&quot;&gt;
+              了
+            &lt;/text&gt;
+        &lt;/svg&gt;
+          </code>
+        </pre>
+      </div>
+
+      <h3 class="mt-5">SVG 常用轉換屬性</h3>
+      <div class="mt-3">
+        <div class="col-lg-6 col-md-6 col-sm-12">
+            <table class="table table-striped">
+                <thead>
+                  <tr>
+                    <th scope="col">程式碼</th>
+                    <th scope="col">功能</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>&lt;rotate&gt;</td>
+                    <td>圖形旋轉(搭配動畫使用)</td>
+                  </tr>
+                  <tr>
+                    <td>&lt;transform&gt;</td>
+                    <td>圖形變形</td>
+                  </tr>
+                </tbody>
+              </table>
+        </div>
+
+        <svg width="500", height="200" style="border:1px solid rgb(96, 96, 96)">
+            <polygon points="200,10 250,190 160,180"
+                    style="fill:rgb(248, 204, 61); stroke:rgb(248, 117, 61); stroke-width: 3"
+                    transform="rotate(-10 50 100)
+                               translate(-36 45.5)
+                               skewX(60)
+                               scale(1 0.6)"
+            />
+        </svg>
+
+
+        <p class="mt-3 mb-1 fs-5">程式碼</p>
+        <pre class="border">
+          <code class="language-html line-numbers remove-initial-line-feed" data-prismjs-copy="複製程式碼">
+            &lt;svg width=&quot;500&quot;, height=&quot;200&quot; style=&quot;border:1px solid rgb(96, 96, 96)&quot;&gt;
+                &lt;polygon points=&quot;200,10 250,190 160,180&quot;
+                        style=&quot;fill:rgb(248, 204, 61); stroke:rgb(248, 117, 61); stroke-width: 3&quot;
+                        transform=&quot;rotate(-10 50 100)
+                                translate(-36 45.5)
+                                skewX(60)
+                                scale(1 0.6)&quot;
+                /&gt;
+            &lt;/svg&gt;
+          </code>
+        </pre>
+      </div>
+
+      <div class="mt-5">
+        <p>更多屬性可參考  
+          <a href="https://developer.mozilla.org/en-US/docs/Web/SVG/Attribute">
+            MDN SVG Attribute reference
+          </a>
+        </p>
+      </div>
+    </div>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
     <script src="./extension/prism.js"></script>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script></script>
-</body>
+  </body>
 </html>
