整理檔案、完成selection章節

--- a/2.svg_shapes.html
+++ b/2.svg_shapes.html
@@ -75,7 +75,7 @@
       <div class="mt-7">
         <h3> &lt;ellipse&gt; 橢圓形</h3>
         <svg width="500", height="200" style="border:1px solid rgb(96, 96, 96)">
-          <ellipse cx="250" cy="100" rx="150" ry="40" stroke="black" stroke-width="3" fill="rgb(248, 204, 61)"></ellipse>
+          <ellipse cx="250" cy="100" rx="150" ry="40" stroke="black" stroke-width="3" fill="rgb(248, 204, 61)"/>
         </svg>
 
         <p class="mt-3 mb-1 fs-5">程式碼</>
@@ -127,7 +127,7 @@
       <div class="mt-7">
         <h3> &lt;polygon&gt; 多邊形</h3>
         <svg width="500", height="200" style="border:1px solid rgb(96, 96, 96)">
-          <polygon points="200,10 250,190 160,180"
+          <polygon points="200,10 260,30 320,90 280,190 160,180 120,100"
                   style="fill: rgb(248, 117, 61); stroke: black; stroke-width: 3"
           />
         </svg>
@@ -136,7 +136,7 @@
         <pre class="border">
           <code class="language-html line-numbers remove-initial-line-feed" data-prismjs-copy="複製程式碼">
             &lt;svg width=&quot;500&quot;, height=&quot;200&quot; style=&quot;border:1px solid rgb(96, 96, 96)&quot;&gt;
-                &lt;polygon points=&quot;200,10 250,190 160,180&quot;
+                &lt;polygon points=&quot;200,10 260,30 320,90 280,190 160,180 120,100&quot;
                         style=&quot;fill: rgb(248, 117, 61); stroke: black; stroke-width: 3&quot;/&gt;
               &lt;/svg&gt;
           </code>
