--- a/4.svg_style.html
+++ b/4.svg_style.html
@@ -182,11 +182,11 @@
         </div>
 
         <svg width="500", height="200" style="border:1px solid rgb(96, 96, 96)">
-            <polygon points="200,10 250,190 160,180"
+            <polygon points="200,10 260,30 320,90 280,190 160,180 120,100"
                     style="fill:rgb(248, 204, 61); stroke:rgb(248, 117, 61); stroke-width: 3"
-                    transform="rotate(-10 50 100)
-                               translate(-36 45.5)
-                               skewX(60)
+                    transform="rotate(-10 80 120)
+                               translate(-66 45.5)
+                               skewX(140)
                                scale(1 0.6)"
             />
         </svg>
