--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
                 <div class="mb-3 col-lg-3 col-md-12">
                     <h2 class="text-darkOrange fw-bold">瞭解 SVG</h2>
                 </div>
-                <a href="./svg_shapes.html" class=" p-3 col-lg-3 col-md-4 col-sm-12 dark-link">
+                <a href="./2.svg_shapes.html" class=" p-3 col-lg-3 col-md-4 col-sm-12 dark-link">
                     <p>形狀元素</p>
                     <img class="w-100" src="./img/geometry_shapes_black_and_white.jpg">
                 </a>
-                <a href="./svg_path_and_words.html" class="p-3 col-lg-3 col-md-4 col-sm-12 dark-link">
+                <a href="./3.svg_path_and_words.html" class="p-3 col-lg-3 col-md-4 col-sm-12 dark-link">
                     <p>路徑與文字</p>
                     <img class="w-100" src="./img/path.png">
                 </a>
-                <a href="./svg_style.html" class="p-3 col-lg-3 col-md-4 col-sm-12 dark-link">
+                <a href="./4.svg_style.html" class="p-3 col-lg-3 col-md-4 col-sm-12 dark-link">
                     <p>樣式與轉換屬性</p>
                     <img class="w-100" src="./img/color.jpg">
                 </a>
@@ -53,11 +53,11 @@
         <section class="container-fluid bg-orange py-4">
             <h2 class="text-darkOrange text-center pb-2 fw-bold">D3.js 選取與綁定</h2>
             <div class="flex-wrap d-flex justify-content-around ">
-                <a class="text-center p-2 col-md-6 col-sm-12 col-12 dark-link">
+                <a href="./5.selection.html" class="text-center p-2 col-md-6 col-sm-12 col-12 dark-link">
                     <p class="">Selection 選取</p>
                     <img class="rounded w-50" src="./img/select.jpg">
                 </a>
-                <a class="text-center p-2 col-md-6 col-sm-12 col-12 dark-link">
+                <a href="./6.data_binding.html" class="text-center p-2 col-md-6 col-sm-12 col-12 dark-link">
                     <p class="">Binding 綁定</p>
                     <img class="rounded w-50" src="./img/bind.jpg">
                 </a>
