--- a/6.data_binding.html
+++ b/6.data_binding.html
@@ -7,8 +7,21 @@
     <title>Selection</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./extension/prism.css">
+    <link rel="stylesheet" href="./css/utils.css" />
 </head>
 <body>
+    <nav class="bg-orange navbar">
+        <div class="container-fluid">
+          <a
+            class="text-decoration-none fw-bold navbar-brand"
+            href="./index.html"
+          >
+            <span class="nav-title"> D3.js 圖表繪製教學</span>
+          </a>
+        </div>
+    </nav>
+  
+    <div class="container p-4"></div>
     
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
